feat: Enhance EmailService with config value sanitization and improved error handling for email sending